# hdx-scraper-copernicus

./: Dockerfile  README.md  data_dates.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/copernicus/: __main__.py  copernicus.py  drought.py  ghsl.py  utilities.py
src/hdx/scraper/copernicus/config/: hdx_dataset_static.yaml  project_configuration.yaml
src/hdx/scraper/ghsl/: __main__.py
tests/: conftest.py  test_copernicus.py  test_ghsl.py
tests/fixtures/: GHS_BUILT_S_E2020_R2023A_54009_100_V1_0_CUB.tif
tests/fixtures/input/: GHS_BUILT_S_E2020_GLOBE_R2023A_54009_100.txt  GHS_BUILT_S_GLOBE_R2023A.txt  GHS_POP_E2020_GLOBE_R2023A_54009_100.txt  GHS_POP_GLOBE_R2023A.txt  dataset-global-anomalies-fapar-viirs.json  dataset-global-human-settlement-layer-ghsl.json  dataset-global-meteorological-drought-tracking.json  drought_drought_tracking_ftp.txt  drought_drought_tracking_ver1-0-1.txt  drought_fapar_ftp.txt  drought_fapar_ver3-0-0.txt  ghsl_ftp.txt  wrl_polbnda_int_15m_uncs.geojson
