#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-copernicus"
requires-python = ">=3.12"
dependencies = [
  "bs4",
  "geopandas",
  "hdx-python-api",
  "hdx-python-utilities",
  "rasterio",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.copernicus.__main__:main"
